# dness

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  release.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/: bare-config.toml  base-config.toml  cloudflare-error.json  cloudflare-update-a-response.json  cloudflare-update-aaaa-response.json  cloudflare-zone-response.json  dness.service  dness.timer  dual-stack-config.toml  dynu-config.toml  godaddy-config.toml  godaddy-get-records.json  he-config.toml  ipify-config.toml  ipv6-config.toml  namecheap-config.toml  namecheap-update.xml  noip-config.toml  porkbun-get-records.json  readme-config-bad.toml  readme-config.toml
ci/: before_deploy.ps1  before_deploy.sh  install.sh  script.sh
src/: cloudflare.rs  config.rs  core.rs  dns.rs  dynu.rs  errors.rs  godaddy.rs  he.rs  iplookup.rs  main.rs  namecheap.rs  noip.rs  porkbun.rs
tests/: exec_tests.rs
