[package]
name = "dness"
version = "0.5.7"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
description = "a dynamic dns client"
homepage = "https://github.com/nickbabcock/dness"
repository = "https://github.com/nickbabcock/dness"
publish = false
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
hickory-resolver = { version = "0.25", features = ["tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
serde_json = "1.0"
toml = "0.8"
chrono = "0.4"
tokio = { version = "1", features = ["macros"] }
handlebars = "6.1"
clap = { version = "4.4.6", features = ["derive"] }
futures = "0.3"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.43"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.log]
version = "0.4"
features = ["serde"]

[features]
default = []

# Disable logging timestamp info (ie: the humantime feature) as mechanisms like
# systemd / journald will show the timestamp that received the log line at.
# Ideally, log formatting should be configurable, but this is a good first step
[dependencies.env_logger]
version = "0.11"
default-features = false
features = ["color", "auto-color", "regex"]

[dev-dependencies]
assert_cmd = "2.0"
rouille = "3"

[package.metadata.deb]
extended-description = """dness is a command line dynamic dns client"""
section = "utility"
priority = "optional"
provides = "dness"
conflicts = "dness-musl"
assets = [
    [
        "target/release/dness",
        "usr/bin/dness",
        "755",
    ],
    [
        "assets/bare-config.toml",
        "etc/dness/dness.conf",
        "644",
    ],
    [
        "assets/dness.service",
        "etc/systemd/system/dness.service",
        "644",
    ],
    [
        "assets/dness.timer",
        "etc/systemd/system/dness.timer",
        "644",
    ],
]
conf-files = ["/etc/dness/dness.conf", "/etc/dness/dness.env"]
